  instead. These need to be renamed to schema.xml and solrconfig.xml when using
  them for Solr1.41.
- Fixed escaping Solr values; wildcards was sometimes incorrectly escaped.
- Solr wildcard searching is now the same as MySQL, per text, not per word;
  't*t' will now match 'the match' and 'no test', instead of only 'no test'.
- Fixed transcoding failure when option 'vpad' was used for ffmpeg.

MediaMosa 3.2.2 (build 1884)
----------------------------
- Extended the logging for REST calls and added filtering to log for specific
  application ID and/or IP address.
- Fixed: some installations where no longer able to edit the MediaMosa servers.
- Fixed: In some cases when a REST call was logged, an exception was thrown when
  no application ID was available or set.
- Fixed: Fixing problem with 1.7 migration module; PDO exception with NULL value
  for metadata name (caused by uppercase name).
- Upgraded to Drupal 7.14.
- Partial rewrite on ratio calculation function for preventing hangs during
  transcode jobs.
- Fixed notices when asset search was called with is_oai = TRUE and assets where
  included which where deleted.
- Changed copyright to 2012.
- Changed 'static public function' to Drupal standard 'public static function'.
- Changed 'static private function' to Drupal standard 'private static
  function'.
- Changed 'static protected function' to Drupal standard 'protected static
  function'.
- MediaMosa Simpletests will now correctly display where the assert, passes and
  fails messages where triggered, instead of the inherited class.
- Added Simpletest to test ACL inherit/copy function.
- Removed core hacks from bootstrap.inc. See
  sites/all/modules/mediamosa/patch/README.txt for original patch notes in case
  your installation requires the patch.
- Fixed 3 more notices for php 5.4.
- Added a post_transcode hook for tools.
- Issue #56 (github) by Bigon: Mediamosa shouldn't hardcode path other modules.

MediaMosa 3.2.1 (build 1846)
----------------------------